--- a/sass/_includes/variables.scss
+++ b/sass/_includes/variables.scss
@@ -1,8 +1,5 @@
-// MARGIN + PADDING
-$header-height: 75px;
-$body-padding: 1rem;
-
-// COULEURS
+/*/
+/ MARGIN + PADDING $header-height: 75px;
+$body-padding: 1rem; // COULEURS
 $primary-color: rgba(0,0,255);
 $secondary-color: rgba(255,255,255);
-
