HTML UPDATE LAYOUT

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,31 +1,20 @@
 @import "_includes/reset.scss";
 @import "_includes/variables.scss";
 @import "_includes/mixins.scss";
-/*main {
-  background: rgba(255, 255, 255);
+
+body {}
+
+section {
   // ON PEUT CALCULER DES CHOSES EN PURE CSS
-  height: calc(100vh - 100px * 2);
+  height: 100vh;
   // GRID SETTINGS
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-items: center;
-  align-items: center;
-  grid-gap: 1rem;
-}
 
-.image-section {
-  padding: 1rem;
-}
+  &.one-column {
+    grid-template-columns: 1fr;
+  }
 
-.image-section img {
-  width: 100%;
-}
-
-.text-section {
-  padding: 1rem;
-}
-
-footer {
-  background: rgba(252, 62, 158);
-  height: 100px;
+  &.two-columns {
+    grid-template-columns: 1fr 1fr;
+  }
 }
