--- a/sass/_includes/variables.scss
+++ b/sass/_includes/variables.scss
@@ -1,5 +1,4 @@
-/*/
-/ MARGIN + PADDING $header-height: 75px;
+//MARGIN + PADDING $header-height: 75px;
 $body-padding: 1rem; // COULEURS
 $primary-color: rgba(0,0,255);
 $secondary-color: rgba(255,255,255);
