row and color style

--- a/sass/_includes/variables.scss
+++ b/sass/_includes/variables.scss
@@ -1,5 +1,6 @@
 //MARGIN + PADDING $header-height: 75px;
 $body-padding: 1rem; // COULEURS
-$primary-color: rgba(0,0,255);
+$primary-color: rgba(0,0,0);
 $secondary-color: rgba(255,255,255);
-$primary-font:'FUTURA'
+$primary-font: 'FUTURA';
+$primary-position: width/2, weight/2;
