--- a/sass/_includes/variables.scss
+++ b/sass/_includes/variables.scss
@@ -3,4 +3,4 @@ $body-padding: 1rem; // COULEURS
 $primary-color: rgba(0,0,0);
 $secondary-color: rgba(255,255,255);
 $primary-font: 'FUTURA';
-$primary-position: width/2, weight/2;
+$primary-margin: windowWeight/2;
