--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -16,14 +16,6 @@ section {
 
   &.two-columns {
     grid-template-columns: 1fr 1fr;
-
-    .first-column {
-      order: 1;
-    }
-
-    .first-column {
-      order: 2;
-    }
   }
 }
 
@@ -31,9 +23,17 @@ section {
   background-color: $primary-color;
 }
 
+.two-columns {
+  background-color: $primary-color;
+}
+
 .section-title {
   font-style: $primary-font;
   color: $secondary-color;
-  margin-left: $primary-position;
-  margin-top: $primary-position;
+  text-align: center;
+  margin-top: $primary-margin;
+}
+
+.second-row {
+  color: $secondary-color;
 }
