--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,6 +2,10 @@
 @import "_includes/variables.scss";
 @import "_includes/mixins.scss";
 
+body {
+  cursor: url("asssets/images/patte.png");
+}
+
 section {
   // ON PEUT CALCULER DES CHOSES EN PURE CSS
   height: 100vh;
@@ -15,12 +19,6 @@ section {
   &.two-columns {
     grid-template-columns: 1fr 1fr;
   }
-}
-
-.cursor {
-  width: 40px;
-  weight: 40px;
-  cursor: none;
 }
 
 .one-column {
