--- a/sass/_includes/variables.scss
+++ b/sass/_includes/variables.scss
@@ -3,3 +3,5 @@ $body-padding: 1rem; // COULEURS
 $primary-color: rgba(0,0,0);
 $secondary-color: rgba(255,255,255);
 $primary-font: 'FUTURA';
+$primary-margin: width/2;
+$secondary-margin: weight/2;
