text align center

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -40,8 +40,7 @@ img {
 .section-title {
   font-style: $primary-font;
   color: $secondary-color;
-  margin-top: $secondary-margin;
-  margin-left: $primary-margin;
+  text-align: $primary-position;
 }
 
 .first-row {
