--- a/sass/_includes/variables.scss
+++ b/sass/_includes/variables.scss
@@ -2,5 +2,7 @@
 $body-padding: 1rem; // COULEURS
 $primary-color: rgba(0,0,0);
 $secondary-color: rgba(255,255,255);
+$third-color: rgba(40,25,100);
 $primary-font: 'FUTURA';
 $primary-position: center;
+$primary-margin: 400px;
